--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@mikro-orm/core": "6.0.5",
+    "@mikro-orm/mysql": "6.0.5",
+    "@mikro-orm/sql-highlighter": "1.0.1",
     "express": "4.18.2",
-    "mysql2": "3.7.1"
+    "reflect-metadata": "0.2.1"
   }
 }
