--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@mikro-orm/core": "6.0.5",
     "@mikro-orm/mysql": "6.0.5",
     "@mikro-orm/sql-highlighter": "1.0.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcrypt": "^5.1.1",
     "express": "4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "0.2.1"
   }
 }
