--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build": "tsc",
     "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/app.js\"",
     "start": "tsc &&  node ./dist/app.js"
-
   },
   "keywords": [],
   "author": "",
@@ -29,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "0.2.1"
