modify verecel settings

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "src": "dist/app.js",
       "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/dist/app.js"
+    }
   ]
 }
