--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mikro-orm/sql-highlighter": "1.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
